Fix chat message overflow

--- a/components/ChatWindow/Input/Input.module.css
+++ b/components/ChatWindow/Input/Input.module.css
@@ -5,7 +5,7 @@
   color: #000;
   flex: 1;
   font-family: LatoHairline;
-  font-size: 16px;
+  font-size: 18px;
   font-weight: bold;
   height: 20px;
   margin: 10px;
